fix: remove odd scroll z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,10 +9,6 @@ body {
   overflow: auto;
 }
 
-#__next {
-  height: 100%;
-}
-
 a {
   color: inherit;
   text-decoration: none;
